remove stand alone gui and sync files with baas

--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -1,418 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block head %}
-	    <title>{% block title %} - TranSMART Arborist</title>
-			<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
-			<link rel="stylesheet" href="{{ url_for('static', filename='mainstyle.css') }}" />
-      <link href="//code.jquery.com/ui/1.11.4/themes/blitzer/jquery-ui.css" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
-      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Fjalla+One">
-      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif">
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-      <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-      <link rel="stylesheet" href="/static/jstree/dist/themes/default/style.min.css" />
-
-    {% endblock %}
+    <link rel="stylesheet" href="/static/jstree/dist/themes/default/style.min.css" />
+    <link rel="stylesheet" href="/static/mainstyle.css" />
 </head>
 <body>
 
-  <!--<h2>Data files</h2>-->
-  <!--<ul>-->
-    <!--{% for clinicaldatafile in clinicaldatafiles %}-->
-    <!--<li>{{ clinicaldatafile }}</li>-->
-    <!--{% endfor %}-->
-    <!--<li><form action="{{ url_for('add_datafile', studiesfolder=studiesfolder, study=study) }}" method=post enctype=multipart/form-data>-->
-      <!--<input type=file name=file>-->
-  		<!--<input type=submit value="Add new datafile">-->
-  	<!--</form></li>-->
-  <!--</ul>-->
+   <div id="treeanddetails">
+    <div id="treediv"></div>
+    <div id="details">
+      <form id="datanodedetails" class="blockform">
+        <fieldset>
+          <legend>Data node details</legend>
+          <ul>
+            <select name="nodetype" disabled="true">
+              <option value="default">Folder</option>
+              <option value="numeric">Numerical</option>
+              <option value="alpha">Categorical Value</option>
+              <option value="tag">Metadata tag</option>
+              <option value="categorical">Categorical</option>
+              <option value="highdim">High-dimensional</option>
+              <option value="codeleaf">Special concept</option>
+            </select>
+          </ul>
+          <ul class="label">
+            <label for="datalabel">Label</label>
+            <input type="text" name="datalabel"/>
+          </ul>
+          <ul hidden class="clinicaldata">
+            <label for="filename">Filename</label>
+            <input disabled type="text" name="filename"/>
+          </ul>
+          <ul hidden class="clinicaldata">
+            <label for="columnnumber">Column Number</label>
+            <input disabled type="text" name="columnnumber"/>
+          </ul>
+          <ul hidden class="clinicaldata">
+            <label for="datalabelsource">Magic #5 </label>
+            <input type="text" name="datalabelsource"/>
+          </ul>
+          <ul hidden class="clinicaldata">
+            <label for="controlvocabcd">Magic #6</label>
+            <input type="text" name="controlvocabcd"/>
+          </ul>
 
-  <div id="treediv"></div>
+          <div hidden id="tagbox" class="tagdata">
+            <!--Here should come some code that lets you add tags dynamically-->
+            <ul>
+              <input type="text" name="tag_tit1" class="tag_title"/>
+              <input type="text" name="tag_desc1" class="tag_desc"/>
+              <input type="number" name="tag_weight1" min="1" max="10" value="3"
+                     class="tag_weight"/>
+            </ul>
+            <ul>
+              <input type="text" name="tag_tit2" class="tag_title"/>
+              <input type="text" name="tag_desc2" class="tag_desc"/>
+              <input type="number" name="tag_weight2" min="1" max="10" value="3"
+                     class="tag_weight"/>
+            </ul>
+            <ul>
+              <input type="text" name="tag_tit3" class="tag_title"/>
+              <input type="text" name="tag_desc3" class="tag_desc"/>
+              <input type="number" name="tag_weight3" min="1" max="10" value="3"
+                     class="tag_weight"/>
+            </ul>
+            <ul>
+              <input type="text" name="tag_tit4" class="tag_title"/>
+              <input type="text" name="tag_desc4" class="tag_desc"/>
+              <input type="number" name="tag_weight4" min="1" max="10" value="3"
+                     class="tag_weight"/>
+            </ul>
+          </div>
+        </fieldset>
+        <br>
+        <input type="submit" value="Apply changes" style="width: 250px;"/>
+        <span style="float: center; padding-right: 5px;" id="feedback">
 
-      <form id="datanodedetails" class="blockform" >
-		<fieldset>
-			<legend>Data node details</legend>
-			<p>
-				<label for="datalabel">Label</label>
-				<input type="text" name="datalabel" required />
-			</p>
-			<p>
-				<label for="nodetype">Node type</label>
-				<select name="nodetype" disabled>
-					<option value="default">Folder</option>
-					<option value="numeric">Numerical</option>
-					<option value="alpha">Categorical Value</option>
-					<option value="tag">Metadata tag</option>
-					<option value="categorical">Categorical</option>
-					<option value="highdim">High-dimensional</option>
-					<option value="codeleaf">Special concept</option>
-				</select>
-			</p>
-			<p hidden class="clinicaldata">
-				<label for="filename">Filename</label>
-				<input disabled type="text" name="filename" />
-			</p>
-			<p hidden class="clinicaldata">
-				<label for="columnnumber">Column Number</label>
-				<input disabled type="text" name="columnnumber" />
-			</p>
-			<p hidden class="clinicaldata" >
-				<label for="datalabelsource">Magic #5 </label>
-				<input type="text" name="datalabelsource" />
-			</p>
-			<p hidden class="clinicaldata" >
-				<label for="controlvocabcd">Magic #6</label>
-				<input type="text" name="controlvocabcd" />
-			</p>
-            <div hidden id="tagbox" class="tagdata">
-                <!--Here should come some code that lets you add tags dynamically-->
-                <p>
-                    <input type="text" name="tag_tit1" class="tag_title" />
-                    <input type="text" name="tag_desc1" class="tag_desc" />
-                    <input type="number" name="tag_weight1"  min="1" max="10" class="tag_weight" />
-                </p><p>
-                    <input type="text" name="tag_tit2" class="tag_title"/>
-                    <input type="text" name="tag_desc2" class="tag_desc" />
-                    <input type="number" name="tag_weight2"  min="1" max="10" class="tag_weight" />
-                </p><p>
-                    <input type="text" name="tag_tit3" class="tag_title" />
-                    <input type="text" name="tag_desc3" class="tag_desc" />
-                    <input type="number" name="tag_weight3"  min="1" max="10" class="tag_weight" />
-                </p><p>
-                    <input type="text" name="tag_tit4" class="tag_title" />
-                    <input type="text" name="tag_desc4" class="tag_desc" />
-                    <input type="number" name="tag_weight4"  min="1" max="10" class="tag_weight" />
-                </p>
-            </div>
+        </span>
+      </form>
+      <div id="bottom-btns">
+              <button type="button" id="embeded_return">Return to Jupyter</button>
+              <span id="feedbacksave"></span>
+      </div>
+    </div>
+  </div>
 
-			<input type="submit" value="Apply changes" />
-			<span style="float: right; padding-right: 5px;" id="feedback"></span>
-		</fieldset>
-	</form>
+<script type="application/javascript">
+    var treeData = {{ json | safe }};
+    var shutdown_url = "{{ url_for('shutdown', treefile=treefile) }}";
+</script>
 
-    <p><button id="embeded_return">Save and return to Jupyter</button></p>
-	<p id="feedbacksave"></p>
-
-	<script src="/static/jstree/dist/jstree.min.js"></script>
-
-	<script>
-	// Send tree JSON to Python and create links to exorted files
-	$(function() {
-		$('button#save').bind('click', function() {
-			var v = $('#treediv').jstree(true).get_json()
-			var tree = JSON.stringify(v);
-
-			$.ajax({
-				method: "POST",
-				contentType: "application/json",
-				url: "{{ url_for('save_columnsfile', studiesfolder=studiesfolder, study=study) }}",
-				data: tree
-			})
-			.done(function( msg ) {
-				console.log( "Data Saved: " + msg.feedback.infos );
-				document.getElementById("feedbacksave").innerHTML = '<ul class="feedback" id="feedbacklist"></ul>';
-        for (i = 0; i < msg.feedback.errors.length; i++) {
-            $( "#feedbacklist" ).append( "<li class='error'>"+msg.feedback.errors[i]+"</li>" );
-        }
-        for (i = 0; i < msg.feedback.warnings.length; i++) {
-            $( "#feedbacklist" ).append( "<li class='warning'>"+msg.feedback.warnings[i]+"</li>" );
-        }
-        for (i = 0; i < msg.feedback.infos.length; i++) {
-            $( "#feedbacklist" ).append( "<li class='message'>"+msg.feedback.infos[i]+"</li>" );
-        }
-			})
-      .fail(function() {
-        document.getElementById("feedbacksave").innerHTML = '<ul class="feedback" id="feedbacklist"></ul>';
-        $( "#feedbacklist" ).append( "<li class='error'>Error encountered in saving column mapping file</li>" );
-      });
-
-			return false;
-		});
-	});
-
-	var node;
-
-	$(function() {
-		$('button#embeded_return').bind('click', function() {
-			var v = $('#treediv').jstree(true).get_json()
-			var tree = JSON.stringify(v);
-
-			$.ajax({
-				method: "POST",
-				contentType: "application/json",
-				url: "{{ url_for('shutdown', mapfile=studiesfolder) }}",
-				data: tree
-			})
-			.done(function( msg ) {
-				console.log( "Data Saved: " + msg.feedback.infos );
-				document.getElementById("feedbacksave").innerHTML = '<ul class="feedback" id="feedbacklist"></ul>';
-        for (i = 0; i < msg.feedback.errors.length; i++) {
-            $( "#feedbacklist" ).append( "<li class='error'>"+msg.feedback.errors[i]+"</li>" );
-        }
-        for (i = 0; i < msg.feedback.warnings.length; i++) {
-            $( "#feedbacklist" ).append( "<li class='warning'>"+msg.feedback.warnings[i]+"</li>" );
-        }
-        for (i = 0; i < msg.feedback.infos.length; i++) {
-            $( "#feedbacklist" ).append( "<li class='message'>"+msg.feedback.infos[i]+"</li>" );
-        }
-			})
-      .fail(function() {
-        document.getElementById("feedbacksave").innerHTML = '<ul class="feedback" id="feedbacklist"></ul>';
-        $( "#feedbacklist" ).append( "<li class='error'>Error encountered in saving column mapping file</li>" );
-      });
-
-			return false;
-		});
-	});
-
-	var node;
-
-	$("form#datanodedetails").submit(function (e) {
-		e.preventDefault();
-        if (node.type == 'tag') {
-
-            for (i = 1; i < 5; i++) {
-                var title  = $( "input[name='tag_tit" + i  + "']"         ).val();
-                var desc   = $( "input[name='tag_desc" + i  + "']"         ).val();
-                var weight = $( "input[name='tag_weight" + i  + "']"         ).val();
-                node.data.tags[title] = [desc, weight]
-            }
-		} else if (typeof node != 'undefined') {
-
-			var text = $( "input[name='datalabel']" ).val();
-			var updated = $("#treediv").jstree('rename_node', node , text );
-			var type = $("select[name='nodetype']").val();
-			$("#treediv").jstree('set_type', node , type );
-			enableRightFields(type);
-
-			if (typeof node.data == 'undefined') {
-				node.data = {}
-			}
-
-			node.data['Filename']           = $( "input[name='filename']"         ).val();
-			node.data['Column Number']      = $( "input[name='columnnumber']"     ).val();
-			node.data['Data Label Source']  = $( "input[name='datalabelsource']"  ).val();
-			node.data['Control Vocab Cd']   = $( "input[name='controlvocabcd']"   ).val();
-			if (updated) {feedback("Successfully applied", false)}
-		} else {feedback("No node selected", true)}
-	});
-
-	function enableRightFields(type){
-		if (type == 'numeric' | type == 'categorical'){
-            $('.label').prop('hidden', false);
-			$('.clinicaldata').prop('hidden', false);
-			$('.tagdata').prop('hidden', true);
-        } else if (type == 'tag'){
-            $('.tagdata').prop('hidden', false);
-            $('.clinicaldata').prop('hidden', true);
-            $('.label').prop('hidden', true);
-        } else {
-            $('.label').prop('hidden', false);
-            $('.tagdata').prop('hidden', true);
-            $('.clinicaldata').prop('hidden', true);
-        }
-	}
-
-	function feedback(string, error) {
-		$( "span#feedback" ).html(string).show();
-		if (error) {
-			$( "span#feedback" ).css('color', 'red');
-		} else {
-			$( "span#feedback" ).css('color', 'green');
-		}
-		setTimeout(function() {
-			$( "span#feedback" ).fadeOut(function () {
-				$( "span#feedback" ).html("");
-			})
-		}, 2000);
-	}
-
-    function customMenu(node) {
-    // The default set of all items
-    var items = {
-        createItem: { // The "create" menu item
-            label: "Create node",
-            action: function (data) {
-                var inst = $.jstree.reference(data.reference),
-                    obj = inst.get_node(data.reference);
-                inst.create_node(obj, {}, "last", function (new_node) {
-                    new_node.data = {file: true};
-                    setTimeout(function () { inst.edit(new_node); },0);
-                });
-            }
-        },
-        addTags: { // The "Add tags" menu item
-            label: "Add tags",
-            action: function (data) {
-                var inst = $.jstree.reference(data.reference),
-                    obj = inst.get_node(data.reference);
-                var tag_specs = {type: 'tag',
-                                 text: 'Tags',
-                                 data: { // This is added to prevent GUI error for Filename
-                                    'Filename': '',
-                                    'tags': {}
-                                 }
-                    }
-                inst.create_node(obj, tag_specs, "last", function (new_node) {
-
-                setTimeout(function () { inst.selected(new_node); },0);
-                });
-            }
-        },
-        renameItem: { // The "rename" menu item
-            label: "Rename",
-            action: function (data) {
-                var inst = $.jstree.reference(data.reference),
-                    obj = inst.get_node(data.reference);
-                inst.edit(obj);
-            }
-        },
-        deleteItem: { // The "delete" menu item
-            label: "Delete",
-            action: function (data) {
-                var inst = $.jstree.reference(data.reference),
-                    obj = inst.get_node(data.reference);
-                if(inst.is_selected(obj)) {
-                    inst.delete_node(inst.get_selected());
-                }
-                else {
-                    inst.delete_node(obj);
-                }
-            }
-        }
-    };
-
-/* // Select here what options to show for which nodes to show what options.
-    if (node.data.file) {
-        delete items.createItem;
-    }
-
-    else{
-        delete items.deleteItem;
-        delete items.renameItem;
-    }
-*/
-    return items;
-}
-
-
-
-	// Create the tree
-	$('#treediv')
-	// listen for event
-	.on('select_node.jstree', function (e, data) {
-		node = data.instance.get_node(data.selected[0]);
-		$( "form#datanodedetails" )[0].reset();
-		$( "input[name='datalabel']" ).val(node.text);
-		$( "select[name='nodetype']" ).val(node.type);
-
-		enableRightFields(node.type);
-
-		if (typeof node.data !== 'undefined') {
-			$( "input[name='filename']" ).val(node.data['Filename']);
-			$( "input[name='columnnumber']" ).val(node.data['Column Number']);
-			if (typeof node.data['Data Label Source'] !== 'undefined') {
-				$( "input[name='datalabelsource']" ).val(node.data['Data Label Source']);
-			}
-			if (typeof node.data['Control Vocab Cd'] !== 'undefined') {
-				$( "input[name='controlvocabcd']" ).val(node.data['Control Vocab Cd']);
-			}
-
-			// This (ugly) way to add multiple tags to 'tags' dictionary in 'data'
-            if (typeof node.data['tags'] !== 'undefined') {
-
-                var counter = 0;
-
-                for (var key in node.data.tags) {
-                    if (node.data.tags.hasOwnProperty(key)) {
-                        counter++
-                        var c = counter.toString()
-                        var tit =  '[name="' + 'tag_tit' + c + '"]'
-                        var desc = '[name="' + 'tag_desc' + c + '"]'
-                        var weight = '[name="' + 'tag_weight' + c + '"]'
-                        $( tit ).val(key);
-                        $( desc ).val(node.data.tags[key][0]);
-                        $( weight ).val(node.data.tags[key][1]);
-
-                    }
-                }
-		    }
-		}
-	})
-	// create the instance
-	.jstree({
-		'core' : {
-			'data' : {{ json | safe }},
-			"check_callback" : true
-		},
-		 'dnd' : {
-                    'is_draggable' : function(node) {
-                        console.log('is_draggable called: ', node[0]);
-                        if (node[0].type == 'alpha') {
-                            return false;
-                        }
-                        return true;
-                 }
-        },
-         "contextmenu" : {items : customMenu},
-
-		"types" : {
-			"default" : {
-				"icon" : "/static/img/tree/folder.gif",
-				"valid_children" : ["alpha",
-									"numeric",
-									"highdim",
-									"codeleaf",
-									"default",
-									"categorical",
-									"tag"]
-			},
-			"study" : {
-				"icon" : "/static/img/tree/study.png",
-				"valid_children" : "all"
-			},
-			"alpha" : {
-				"icon" : "/static/img/tree/alpha.gif",
-				"valid_children" : ["tag"]
-			},
-			"categorical" : {
-			    "max_depth" : "2",
-				"icon" : "/static/img/tree/folder.gif",
-				"valid_children" : ["alpha", "tag"]
-			},
-			"numeric" : {
-				"icon" : "/static/img/tree/numeric.gif",
-				"valid_children" : ["tag"]
-			},
-			"highdim" : {
-				"icon" : "/static/img/tree/dna_icon.png",
-				"valid_children" : ["tag"]
-			},
-			"tag" : {
-				"icon" : "/static/img/tree/tag_icon.png",
-				"valid_children" : "none"
-			},
-			"codeleaf" : {
-				"icon" : "/static/img/tree/code.png",
-				"valid_children" : ["alpha", "tag"]
-			},
-		},
-		'sort': function (a, b) {
-			if ((this.get_type(a) == 'tag') && (this.get_type(b) != 'tag')) {
-				return -1;
-			} else if ((this.get_type(a) != 'tag') && (this.get_type(b) == 'tag')) {
-				return 1;
-            } else if ((this.get_type(a) == 'default') && (this.get_type(b) != 'default')) {
-				return -1;
-			} else if ((this.get_type(a) != 'default') && (this.get_type(b) == 'default')) {
-				return 1;
-			} else {
-				return this.get_text(a) > this.get_text(b) ? 1 : -1;
-			}
-		},
-		"plugins" : [ "dnd", "sort", "contextmenu", "types", "unique", "wholerow" ]
-	});
-
-	</script>
-{% endblock %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jstree/3.0.9/jstree.min.js"></script>
+<script src="/static/tree.js"></script>
