--- a/tmtk/arborist/static/mainstyle.css
+++ b/tmtk/arborist/static/mainstyle.css
@@ -1,43 +1,12 @@
-html {
-  margin: 0;
-  padding: 0;
-  font-size: 62.5%;
-}
-body {
-  max-width: 800px;
-  min-width: 300px;
-  margin: 0 auto;
-  padding: 20px 10px;
-  font-size: 14px;
-  font-size: 1.4em;
-  font-family: 'Open Sans', serif;
-}
-h1 {
-  font-size: 1.8em;
-  text-align: center;
-  font-family: 'Droid Serif', serif;
-}
-/* unvisited link */
-a:link {
-    color: #818c3c;
-}
-/* visited link */
-a:visited {
-    color: #25591f;
-}
-/* mouse over link */
-a:hover {
-    color: #72601b;
-}
-/* selected link */
-a:active {
-    color: #593a0e;
-}
 p#breadcrumb {
   font-family: 'Fjalla One', serif;
 }
+legend {
+  font-size: 1.4em;
+  text-align: center;
+}
 div#content {
-  min-height: 300px;
+  min-height: 500px;
 }
 div#footer {
   font-style: italic;
@@ -54,31 +23,42 @@ ul.folderlist {
 ul.folderlist li img {
   padding: 4px 0px 0px 0px;
 }
+html {
+  height: 80%;
+}
+body, div.container {
+  height: 100%;
+}
 div#treeanddetails {
-  overflow: auto;
+  border: 1px solid silver;
+  height: 100%;
 }
 div#treediv {
   overflow: scroll;
-  border: 1px solid silver;
-  height: 300px;
-  width: 400px;
+  width: 60%;
+  height: 100%;
   float: left;
+}
+div#details {
+  width: 40%;
+  height: 100%;
+  float: right;
+  position: relative;
+}
+div#bottom-btns {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
 }
 form.blockform label {
   text-align: right;
-  float: left;
-  width: 200px;
+  width: 140px;
   padding-right: 5px;
 }
 input[type=text], select {
-  float: left;
-  width: 275px;
-  /* Hackery to get selects to be as wide as input texts... */
-  border:1px solid silver;
-  -ms-box-sizing:content-box;
-  -moz-box-sizing:content-box;
-  -webkit-box-sizing:content-box;
-  box-sizing:content-box;
+  float: center;
+  width: 200px;
 }
 input[type=text][disabled], select[disabled] {
   border-color: #eee;
@@ -95,20 +75,23 @@ fieldset input[type=submit] {
   float: right;
 }
 li.error {
-  background: url('/static/img/message/error.png') no-repeat left top;
+  background: url('/static/images/message/error.png') no-repeat left top;
   padding: 0px 0px 0px 20px;
   list-style: none;
 }
 li.warning {
-  background: url('/static/img/message/warning.png') no-repeat left top;
+  background: url('/static/images/message/warning.png') no-repeat left top;
   padding: 0px 0px 0px 20px;
   list-style: none;
 }
 li.message {
-  background: url('/static/img/message/info.png') no-repeat left top;
+  background: url('/static/images/message/info.png') no-repeat left top;
   padding: 0px 0px 0px 20px;
   list-style: none;
 }
 input[type=text].tag_title {
   width: 40px;
+}
+::-webkit-scrollbar {
+    display: none;
 }
