--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -11,6 +11,7 @@
 <!-- Here starts shared code between BaaS and Jupyter embedded template. -->
 
    <div id="treeanddetails">
+       <input class="form-control form-control" type="text" id="search_box" placeholder="Search here..."/>
     <div id="treediv"></div>
     <div id="details">
       <form id="datanodedetails" class="blockform">
