Distinguish empty variables from numeric ones.

--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -73,5 +73,5 @@
 </script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jstree/3.0.9/jstree.min.js"></script>
+<script src="/static/jstree/dist/jstree.min.js"></script>
 <script src="/static/tree.js"></script>
