spinner for search bar

--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -14,6 +14,7 @@
     <div id="treediv"></div>
     <div id="details">
         <input class="form-control form-control" type="text" id="search_box" placeholder="Search here..."/>
+        <img id="search_spinner" src="/static/images/spin.svg">
       <form id="datanodedetails" class="blockform">
         <fieldset>
           <legend>Data node details</legend>
