Renamed some json data ids to be appropriate to tm-batch

--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -32,11 +32,11 @@
               </tr>
               <tr hidden class="clinicaldata">
                 <td>Magic #5</td>
-                <td width="90%"><input style="width:inherit;" class="form-control form-control-sm" type="text" id="datalabelsource"/></td>
+                <td width="90%"><input style="width:inherit;" class="form-control form-control-sm" type="text" id="magic5"/></td>
               </tr>
               <tr hidden class="clinicaldata">
                 <td>Magic #6</td>
-                <td width="90%"><input style="width:inherit;" class="form-control form-control-sm" type="text" id="controlvocabcd"/></td>
+                <td width="90%"><input style="width:inherit;" class="form-control form-control-sm" type="text" id="magic6"/></td>
               </tr>
           </table>
 
