Force categorical in GUI, requires restarting arborist.

--- a/tmtk/arborist/templates/jupyter_embedded.html
+++ b/tmtk/arborist/templates/jupyter_embedded.html
@@ -51,6 +51,17 @@
                                                class="form-control form-control-sm" type="text"
                                                id="magic6"/></td>
                     </tr>
+                    <tr hidden class="clinicaldata">
+                        <td><input style="width:inherit;position:relative;float:right;margin-right:5px;"
+                                   class="form-control form-control-sm" type="checkbox"
+                                   id="fc"/></td>
+                        <td>Force Categorical</td>
+
+                    </tr>
+                    <!--<tr hidden class="clinicaldata">-->
+                        <!--<label style="padding-right: 5px;">-->
+                            <!--<input id="fc" type="checkbox" value="">Force Categorical</label>-->
+                    <!--</tr>-->
                 </table>
 
                 <div hidden id="tagbox" class="tagdata">
