show high dimensional node information in arborist

--- a/tmtk/arborist/static/mainstyle.css
+++ b/tmtk/arborist/static/mainstyle.css
@@ -77,3 +77,8 @@ input#search_box{
   color: #5cb85c;
   font-weight: bold;
 }
+.hdtagdata {
+  margin-left: 5px;
+  margin-top: 15px;
+  font-size: smaller;
+}
